# rfidx

./: Cargo.toml  LICENSE-MIT  README.md
src/: api.rs  app.rs  file_index.rs  main.rs  notify.rs
src/api/: error.rs  file.rs
