[package]
name = "rusty_indexer"
version = "0.1.0"
authors = ["Alexander Krigsman <alkrigsman@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
warp = "0.3"
