[package]
name = "rusty_indexer"
version = "0.1.0"
authors = ["Alexander Krigsman <alkrigsman@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
glob = "0.3"
log = "0.4"
notify = "4"
path-absolutize = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
warp = "0.3"
